# ubrobot

./: .gitignore  MachineList.txt  README.md  apt  chatbot.py  clean.sh  client.py  controllers.py  cosmos_reason1_infer.py  d435i_odom_bridge.launch.py  emos.md  gradio_webrtc_test.py  hello.py  http_cosmos_reason1_server.py  http_internvla_client.py  http_internvla_server.py  inference_sample.py  install.sh  pyproject.toml  qwen_plot_util.py  requirements.in  requirements.txt  server.py  setup.py  start_piper_host.sh  start_policy_server.bash  start_realsense_d435i.sh  start_reasoning_server.bash  start_rtabmap_odom.bash  start_rtabmap_odom.sh  start_so101_host.sh  start_test.bash  t.py  tele.sh  test.py  test.sh  test_mp.py  test_qwen25_vl.py  test_qwen3_vl.py  tgr.py  (+9 more)
assets/: cert.pem  key.pem  piper_config.yml
assets/realworld_sample_data1/: instruction.txt
assets/realworld_sample_data2/: insturction.txt
assets/urdf/: piper_description.urdf
docs/: RobotandDataSet.md  install_realsense.md
examples/: cosmos_reason1_infer.py  evaluate.py  http_cosmos_reason1_server.py  http_internvla_client.py  lerobot_record.py  tele.sh  ubrobot_startup_sensors.sh  yolo_img_det.py
examples/piper/: record.py  teleoperate.py
examples/piper_arm/lerobot_robot_piper/: README.md  tele.sh
examples/piper_to_piper/: teleoperate.py
examples/so101_to_so101/: record.py  teleoperate_networked.py
graspnet/: command_demo.sh  demo.py
graspnet/dataset/: graspnet_dataset.py
lekiwi/: __init__.py  config_lekiwi.py  lekiwi.py  lekiwi_base.py
piper_scripts/: README.md  check_gamepad.py
piper_to_piper/: teleoperate.py
piper_ws/src/GraspGen/tensorrtx_yolov8_ros/src/: yolov8_seg.cpp
robots/: DataSet.md  README.md  RobotandDataSet.md
ros_depends_ws/: README.md  build.sh  ubrobot.launch
ros_depends_ws/src/: README.md
ros_depends_ws/src/GraspGen/tensorrtx_yolov8_ros/src/: .yolov8_seg.cpp.swp
ros_depends_ws/src/emos_bringup/: package.xml  setup.cfg  setup.py
ros_depends_ws/src/emos_bringup/emos_bringup/: fix_detection_header.py
ros_depends_ws/src/emos_bringup/launch/: vision_depth_bringup.launch.py
ros_depends_ws/src/piper_ros/src/piper/launch/: start_single_piper.launch  start_single_piper_ik_worviz.launch
ros_depends_ws/src/piper_ros/src/piper/scripts/: piper_ctrl_single_node.py
ros_depends_ws/src/rtabmap/corelib/src/camera/: CameraRealSense2.cpp
ros_depends_ws/src/rtabmap_odom_py/: CMakeLists.txt  README.md  odom_example.py  realsense_odom.cpp  setup.py
ros_depends_ws/src/rtabmap_odom_py/odom/: rs_rgbd_odom.py
ros_depends_ws/src/rtabmap_odom_py/src/: realsense_odom.cpp
ros_depends_ws/src/rtabmap_ros/rtabmap_examples/launch/: test_d435i_odom.launch  ubrobot.launch
ros_depends_ws/src/tensorrtx_yolov8_ros/launch/: yolov8.launch
ros_depends_ws/src/tensorrtx_yolov8_ros/src/: yolov8_seg.cpp
ros_depends_ws/src/vision_opencv/opencv_tests/: setup.py
scripts/: inference_sample_cosmosreason1.py  internnav_demo.py
sensors/: README.md  install_realsense.md
sensors/ascam_ros2_ws/: build.sh
sensors/ascam_ros2_ws/src/ascamera/: test_odom.py
sensors/ascam_ros2_ws/src/ascamera/launch/: hp60c.launch.py
sensors/ascam_ros2_ws/src/ros2-ORB_SLAM2/src/rgbd_pose/: KeyFrameTrajectory.txt  rgbd-slam-pose-node.hpp
sensors/ascam_ros2_ws/src/yahboomcar_mediapipe/yahboomcar_mediapipe/: 02_PoseDetector.py  03_Holistic.py  04_FaceMesh.py  05_FaceEyeDetection.py  08_Objectron.py
sensors/ascam_ros2_ws/src/yahboomcar_slam/: CMakeLists.txt
sensors/ascam_ros2_ws/src/yahboomcar_slam/build_check/: CTestConfiguration.ini
sensors/ascam_ros2_ws/src/yahboomcar_slam/launch/: orbslam_base_launch.py
sensors/ascam_ros2_ws/src/yahboomcar_slam/params/: pointcloud_map_copy.yaml  pointcloud_octomap.yaml
so101_to_so101/: README.md  evaluate.py
src/: tts.py  utils.py
src/chat_ui/: README.md  app.py  llm.py  pipeline.py  test_asr.py  test_cosyvoice.py  tts.py
src/examples/: start_lekiwi_base.bash
src/service/: grasp_plan.py  start_policy_server.bash  start_reasoning_server.bash
src/service/chat/: asr_server.py  hello_1.py
src/service/chat/samples/python/: funasr_wss_client.py
src/service/planning/: README.md  http_internvla_server.py
src/service/reasoning/: README.md  command_demo.sh  cosmos.py  cosmos_reason_infer.py  demo.py  grasp_plan.py  http_cosmos_reason_server.py  http_reasoning_server.py  qwen_plot_util.py  robobrain_reason_infer.py  test_qwen25_vl.py  vlm_reason_infer.py
src/ubrobot/cameras/: README.md  camera_odom.py  camera_util.py  install_realsense.md
src/ubrobot/motors/: motors_bus.py
src/ubrobot/motors/piper/: motors_bus.py
src/ubrobot/robots/: README.md  arm_action.py  asr.py  nav.py  piper_motion_plan.py  pointcloud.py  tts.py  ubrobot.py  unitree_go2_robot.py  utils.py  vlm.py
src/ubrobot/robots/lekiwi/: __init__.py  config_lekiwi_base.py  lekiwi_base.py  lekiwi_host.py
src/ubrobot/robots/logoplanner/: lekiwi_logoplanner_host.py
src/ubrobot/robots/logoplanner/Pi3/: .gitignore  README.md  example_mm.py
src/ubrobot/robots/piper/: README.md  __init__.py  config.py  config_piper.py  piper.py  piper_client.py  piper_host.py  piper_sdk_interface.py  robot.py
src/ubrobot/robots/piper_bx/: config.py  robot.py
src/ubrobot/robots/piper_scripts/: README.md
src/ubrobot/robots/so101_follower/: __init__.py  config_so101_follower.py  so101_client.py  so101_follower.py  so101_host.py
src/ubrobot/teleoperators/: utils.py
src/ubrobot/teleoperators/gamepad/: README.md  main.py  main_virtual.py  requirements_common.txt
src/ubrobot/teleoperators/gamepad/piper/: gamepad_base.py  gamepad_trac_ik.py  kinematic_trac_ik.py  main.py  main_virtual.py  piper.urdf
src/ubrobot/teleoperators/gamepad/src/: gamepad_base.py  gamepad_curobo.py  gamepad_limit.py  gamepad_no_limit.py  gamepad_pin.py  gamepad_trac_ik.py  kinematic_curobo.py  kinematic_limit.py  kinematic_no_limit.py  kinematic_pin.py
src/ubrobot/teleoperators/piper/: config.py  teleop_keyboard.py  teleoperator.py
src/ubrobot/teleoperators/piper_to_piper/: evaluate.py
(+24 files in other folders)
