[build-system]
requires = ["setuptools==65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ubrobot"
version = "0.0.1"
authors = [
  { name = "Xiaowei Zhao", email = "mathzxw2002@gmail.com" }
]
description = "UBRobot"
requires-python = ">=3.10"

dependencies = { file = ["requirements.txt"] }

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]

