[build-system]
requires = ["setuptools==65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ubrobot"
version = "0.0.1"
authors = [
  { name = "Xiaowei Zhao", email = "mathzxw2002@gmail.com" }
]
description = "UBRobot"
requires-python = ">=3.10"

dependencies = [
  "absl-py==2.3.1",
  "accelerate==1.12.0",
  "addict==2.4.0",
  "aiofiles==23.2.1",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.13.3",
  "aiosignal==1.4.0",
  "aliyun-python-sdk-core==2.16.0",
  "aliyun-python-sdk-kms==2.16.5",
  "annotated-types==0.7.0",
  "antlr4-python3-runtime==4.9.3",
  "anyio==4.12.1",
  "asgiref==3.11.0",
  "asttokens==3.0.1",
  "async-timeout==5.0.1",
  "attrs==25.4.0",
  "audioread==3.1.0",
  "av==15.1.0",
  "blinker==1.9.0",
  "casadi==3.7.0",
  "catkin-pkg==1.1.0",
  "certifi==2026.1.4",
  "cffi==2.0.0",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "cloudpickle==3.1.2",
  "cmake==4.1.3",
  "colorlog==6.10.1",
  "comm==0.2.3",
  "configargparse==1.7.1",
  "contourpy==1.3.2",
  "crcmod==1.7",
  "cryptography==46.0.3",
  "cycler==0.12.1",
  "dash==3.3.0",
  "dashscope==1.25.5",
  "decorator==5.2.1",
  "diffusers==0.35.2",
  "dill==0.4.0",
  "distro==1.9.0",
  "draccus==0.10.0",
  "editdistance==0.8.1",
  "evdev==1.9.2",
  "executing==2.2.1",
  "fastapi==0.112.4",
  "fastjsonschema==2.21.2",
  "ffmpeg-python==0.2.0",
  "ffmpy==1.0.0",
  "flask==3.1.2",
  "frozenlist==1.8.0",
  "fsspec[http]==2025.9.0",
  "funasr==1.1.6",
  "gitpython==3.1.46",
  "gradio==5.1.0",
  "gradio-client==1.4.0",
  "gymnasium==1.2.2",
  "hf-transfer==0.1.9",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "huggingface-hub[cli,hf-transfer]==0.35.3",
  "hydra-core==1.3.2",
  "imageio[ffmpeg]==2.37.2",
  "imageio-ffmpeg==0.6.0",
  "importlib-metadata==8.7.1",
  "inquirerpy==0.3.4",
  "ipywidgets==8.1.8",
  "itsdangerous==2.2.0",
  "jaconv==0.4.1",
  "jamo==0.4.1",
  "jedi==0.19.2",
  "jieba==0.42.1",
  "jinja2==3.1.6",
  "jiter==0.12.0",
  "jmespath==0.10.0",
  "joblib==1.5.3",
  "jsonlines==4.0.0",
  "jsonschema==4.26.0",
  "jsonschema-specifications==2025.9.1",
  "kaldiio==2.18.1",
  "keyboard==0.13.5",
  "kiwisolver==1.4.9",
  "lazy-loader==0.4",
  "lerobot==0.4.2",
  "librosa==0.11.0",
  "manifold3d==3.3.2",
  "mapbox-earcut==2.0.0",
  "markdown-it-py==4.0.0",
  "markupsafe==2.1.5",
  "matplotlib==3.10.8",
  "matplotlib-inline==0.2.1",
  "mdurl==0.1.2",
  "mergedeep==1.3.4",
  "modelscope-studio==1.6.1",
  "mpmath==1.3.0",
  "multidict==6.7.0",
  "multiprocess==0.70.16",
  "mypy-extensions==1.1.0",
  "networkx==3.4.2",
  "nodeenv==1.10.0",
  "numba==0.63.1",
  "numpy>=1.24.4",
  "nvidia-cublas-cu12==12.6.4.1",
  "nvidia-cuda-cupti-cu12==12.6.80",
  "nvidia-cuda-nvrtc-cu12==12.6.77",
  "nvidia-cuda-runtime-cu12==12.6.77",
  "nvidia-cudnn-cu12==9.5.1.17",
  "nvidia-cufft-cu12==11.3.0.4",
  "nvidia-cufile-cu12==1.11.1.6",
  "nvidia-curand-cu12==10.3.7.77",
  "nvidia-cusolver-cu12==11.7.1.2",
  "nvidia-cusparse-cu12==12.5.4.2",
  "nvidia-cusparselt-cu12==0.6.3",
  "nvidia-nccl-cu12==2.26.2",
  "nvidia-nvjitlink-cu12==12.6.85",
  "nvidia-nvtx-cu12==12.6.77",
  "omegaconf==2.3.0",
  "open3d>=0.16.0",
  "openai==2.15.0",
  "opencv-python>=4.11",
  "opencv-python-headless>=4.11",
  "oss2==2.19.1",
  "packaging==25.0",
  "pandas==2.3.3",
  "pillow==10.4.0",
  "piper-sdk==0.6.1",
  "plotly==6.5.2",
  "prompt-toolkit==3.0.52",
  "propcache==0.4.1",
  "protobuf==6.33.4",
  "psutil==7.2.1",
  "ptyprocess==0.7.0",
  "pyarrow==23.0.0",
  "pycollada==0.9.2",
  "pycparser==2.23",
  "pycryptodome==3.23.0",
  "pydantic==2.12.5",
  "pydantic-core==2.41.5",
  "pydub==0.25.1",
  "pygame==2.6.1",
  "pygments==2.19.2",
  "pyliblzfse==0.4.1",
  "pynndescent==0.6.0",
  "pyparsing==3.3.1",
  "pyquaternion==0.9.9",
  "pyserial==3.5",
  "python-can==4.6.1",
  "python-dateutil==2.9.0.post0",
  "python-multipart==0.0.21",
  "python-xlib==0.33",
  "pytorch-wpe==0.0.1",
  "pytz==2025.2",
  "pyyaml==6.0.3",
  "pyyaml-include==1.4.1",
  "pyzbar==0.1.9",
  "pyzmq==27.1.0",
  "qrcode==8.2",
  "qwen-vl-utils==0.0.14",
  "requests==2.32.5",
  "rospkg==1.6.1",
  "rpds-py==0.30.0",
  "ruff==0.14.13",
  "safetensors==0.7.0",
  "scikit-image==0.25.2",
  "scikit-learn==1.7.2",
  "scipy==1.15.3",
  "semantic-version==2.10.0",
  "sentencepiece==0.2.1",
  "sentry-sdk==2.49.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sounddevice==0.5.3",
  "soundfile==0.12.1",
  "soxr==1.0.0",
  "stack-data==0.6.3",
  "starlette==0.38.6",
  "svg-path==7.0",
  "sympy==1.14.0",
  "tensorboardx==2.6.4",
  "termcolor==3.3.0",
  "threadpoolctl==3.6.0",
  "tifffile==2025.5.10",
  "tokenizers==0.15.2",
  "toml==0.10.2",
  "tomli==2.4.0",
  "tomlkit==0.12.0",
  "torch==2.7.1",
  "torchaudio==2.7.1",
  "torch-complex==0.4.4",
  "torchvision==0.22.1",
  "tqdm==4.66.6",
  "transformers==4.36.2",
  "transforms3d==0.4.2",
  "trimesh[easy]==4.11.1",
  "triton>=3.3.0",
  "typeguard==4.4.4",
  "typer==0.21.1",
  "tyro==1.0.5",
  "tzdata==2025.3",
  "ultralytics==8.4.6",
  "umap-learn==0.5.11",
  "urllib3==2.6.3",
  "uvicorn==0.17.5",
  "viser==0.2.11",
  "websocket-client==1.9.0",
  "websockets==12.0",
  "yourdfpy==0.0.59",
  "datasets==4.1.1",
  "zipp==3.23.0"
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]

